Password Manager 25.3.3
* Remove javafx-maven-plugin, use exec-maven-plugin instead
* Use AppCDS in Linux install script
* Java 24
* JavaFX 24